--- a/es/index.html
+++ b/es/index.html
@@ -199,7 +199,7 @@
     </div>
     <a href="#anchor-servicios" class="arrow">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
-          <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
+          <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#191444" stroke-width="5"/>
         </svg> 
       </a>
     </div>
@@ -564,7 +564,7 @@
       </div>
       <a href="#anchor-standards" class="arrow">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
-            <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
+            <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#191444" stroke-width="5"/>
           </svg> 
       </a>
   </div>
@@ -654,6 +654,7 @@
 </script>
 <script src="../js/three.r119.min.js"></script>
 <script src="../js/vanta.globe.min.js"></script>
+<script src="js/vanta.globe.min.js"></script>
 <script>
   VANTA.GLOBE({
     el: "#contacto",
@@ -662,11 +663,12 @@
     gyroControls: false,
     minHeight: 200.00,
     minWidth: 200.00,
-    scale: 1.00,
-    scaleMobile: 1.00,
-    color: 0x5e25a2,
-    color2: 0x545252,
-    backgroundColor: 0x0
+    scale: 0.7,
+    scaleMobile: 0.7,
+    color: 0x334681,
+    color2: 0x7654b8,
+    size: 0.8,
+    backgroundColor: 0xfcfcfc
   })
 </script>
 <script src="../js/script.js"></script>
