--- a/es/index.html
+++ b/es/index.html
@@ -191,10 +191,10 @@
         <div class="anchor" id="anchor-about"></div>
         <div id="about-text">
         <div class="p-wrapper">
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        <p>SoeniX es una firma de auditoría y consultoría de ciberseguridad de primer nivel. SoeniX se ha dedicado a ayudar a las organizaciones con la implementación de valiosos programas de gestión de riesgos y a mitigar los riesgos de ciberseguridad. Nuestro equipo ha proporcionado soluciones de ciberseguridad en todo el mundo.</p>
     </div>
     <div>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </p>
+        <p>SoeniX ofrece soluciones llave en mano únicas adaptadas a las necesidades de cada cliente, incluidas soluciones de gestión de riesgos, auditoría y educación. SoeniX Security permite a los clientes tomar decisiones de seguridad más informadas y confiar en la seguridad de sus datos.</p>
         </div>
     </div>
     <a href="#anchor-servicios" class="arrow">
