--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
         <h2>About us</h2>
         <div id="about-text">
         <div class="p-wrapper">
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        <p>SoeniX is a top-notch cybersecurity consulting and audit firm. SoeniX has been dedicated to assisting organizations with the implementation of valuable risk management programs and to mitigating cybersecurity risks. Our team has provided cybersecurity solutions everywhere in the world.</p>
         </div>
         <div>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </p>
+        <p>SoeniX delivers unique, turnkey solutions tailored to each client’s needs, including risk management solutions, auditing, and education. SoeniX Security empowers customers to make more informed security decisions and trust the safety of their data.</p>
         </div>
     </div>
     <a href="#anchor-servicios" class="arrow">
