--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoeniX</title>
     <link rel="shortcut icon" type="image/png" href="img/icon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/styles.css">
@@ -27,6 +26,19 @@
         <span id="line-three"></span>
       </div>
         <ul id="nav-list">
+          <li class="nav-li hide" id="idioma-li">
+            <a href="es/index.html" id="idioma">
+              <p>ES</p>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                <g id="Grupo_420" data-name="Grupo 420" transform="translate(-1280.53 -2071.578)">
+                  <path id="Trazado_547" data-name="Trazado 547" d="M1380.53,2219v7.226c-.283.218-.171.537-.2.813a48.855,48.855,0,0,1-2.967,12.871c-.748,0-1.5-.013-2.244-.013h-82.85q-4.293,0-8.587.013c-.055-.117-.121-.231-.164-.353a50.058,50.058,0,0,1-2.846-20.791,49.321,49.321,0,0,1,3.01-13.646c.813,0,1.626.013,2.439.013q40.839,0,81.679,0,4.782,0,9.563-.013a46.65,46.65,0,0,1,2.383,8.622C1380.039,2215.493,1380.272,2217.25,1380.53,2219Z" transform="translate(0 -100.944)" fill="#ffd02d"/>
+                  <path id="Trazado_548" data-name="Trazado 548" d="M1387.135,2104.179q-4.782.007-9.563.013h-81.679c-.813,0-1.626-.009-2.439-.013.544-1.317,1.031-2.662,1.642-3.947a50.038,50.038,0,0,1,38-28.115,8.983,8.983,0,0,0,3.1-.539h8.008c.113.3.383.181.586.2a57.3,57.3,0,0,1,6.64,1.061,49.468,49.468,0,0,1,23.609,12.806A48.648,48.648,0,0,1,1387.135,2104.179Z" transform="translate(-9.768 0)" fill="#cc001e"/>
+                  <path id="Trazado_549" data-name="Trazado 549" d="M1387.134,2347.591a49.918,49.918,0,0,1-35.621,31.3,49.977,49.977,0,0,1-53.613-22.229,46.287,46.287,0,0,1-4.448-9.073q4.294-.007,8.587-.013h82.85C1385.638,2347.578,1386.386,2347.586,1387.134,2347.591Z" transform="translate(-9.767 -208.622)" fill="#cc001e"/>
+                </g>
+              </svg>
+              
+            </a>
+            </li>
             <li class="nav-li hide close">
               <a href="index.html#anchor-about">About us</a>
               <div class="underline">
@@ -246,18 +258,8 @@
                 <span class="line"></span>
               </div>
             </li>
-            <li class="nav-li hide" id="idioma-li">
-            <a href="es/index.html" id="idioma">
-              <p>ES</p>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-                <g id="Grupo_420" data-name="Grupo 420" transform="translate(-1280.53 -2071.578)">
-                  <path id="Trazado_547" data-name="Trazado 547" d="M1380.53,2219v7.226c-.283.218-.171.537-.2.813a48.855,48.855,0,0,1-2.967,12.871c-.748,0-1.5-.013-2.244-.013h-82.85q-4.293,0-8.587.013c-.055-.117-.121-.231-.164-.353a50.058,50.058,0,0,1-2.846-20.791,49.321,49.321,0,0,1,3.01-13.646c.813,0,1.626.013,2.439.013q40.839,0,81.679,0,4.782,0,9.563-.013a46.65,46.65,0,0,1,2.383,8.622C1380.039,2215.493,1380.272,2217.25,1380.53,2219Z" transform="translate(0 -100.944)" fill="#ffd02d"/>
-                  <path id="Trazado_548" data-name="Trazado 548" d="M1387.135,2104.179q-4.782.007-9.563.013h-81.679c-.813,0-1.626-.009-2.439-.013.544-1.317,1.031-2.662,1.642-3.947a50.038,50.038,0,0,1,38-28.115,8.983,8.983,0,0,0,3.1-.539h8.008c.113.3.383.181.586.2a57.3,57.3,0,0,1,6.64,1.061,49.468,49.468,0,0,1,23.609,12.806A48.648,48.648,0,0,1,1387.135,2104.179Z" transform="translate(-9.768 0)" fill="#cc001e"/>
-                  <path id="Trazado_549" data-name="Trazado 549" d="M1387.134,2347.591a49.918,49.918,0,0,1-35.621,31.3,49.977,49.977,0,0,1-53.613-22.229,46.287,46.287,0,0,1-4.448-9.073q4.294-.007,8.587-.013h82.85C1385.638,2347.578,1386.386,2347.586,1387.134,2347.591Z" transform="translate(-9.767 -208.622)" fill="#cc001e"/>
-                </g>
-              </svg>
-              
-            </a>
+            <li class="nav-li hide" id="redblue-li">
+              <a href="red-blue-team.html">Red vs BLUE</a>
             </li>
         </ul>
     </nav>
@@ -279,19 +281,20 @@
     <div id="banner">
       <video src="img/cyber.mp4" loop muted autoplay type="video/webm"></video>
        <div id="slider">
-        <h3 id="slide-one" class="fade">Hack yourself, before someone else does.</h3>
         <div class="type-wrap">
           <div id="typed-strings" style="display: none;">
-            <p>Leverage the advanced skills of our professional penetration testing team to uncover vulnerabilities industry standards overlook.</p>
+            <p>Hack yourself, before someone else does</p>
           </div>
           <span id="typed"></span>
         </div>
+        <h3>Leverage the advanced skills of our professional penetration testing team to uncover vulnerabilities industry standards overlook</h3>
       </div>
-        <a href="#anchor-about" id="arrow">
+      <a href="#anchor-about" id="arrow">
+        <p>Learn more</p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
             <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
           </svg> 
-        </a>         
+      </a>        
     </div>
 
     <div id="about-us" data-aos="fade-up" data-aos-offset="300">
@@ -765,10 +768,10 @@
 <script>
 var typed = new Typed("#typed", {
   stringsElement: '#typed-strings',
-  typeSpeed: 20,
+  typeSpeed: 30,
   backSpeed: 0,
   backDelay: 500,
-  startDelay: 1000,
+  startDelay: 500,
   loop: false,
 });
 </script>
