--- a/es/servicios/auditoria-soc.html
+++ b/es/servicios/auditoria-soc.html
@@ -159,12 +159,6 @@
         <span id="line-three"></span>
       </div>
         <ul id="nav-list">
-            <li class="nav-li close hide">
-              <a href="../index.html#anchor-about">Nosotros</a>
-              <div class="underline">
-                <span class="line"></span>
-              </div>
-            </li>
             <li id="servicios-li" class="nav-li hide">
               <a href="../index.html#anchor-servicios">
                   <p>Servicios</p>  
@@ -191,6 +185,9 @@
               <div class="underline">
                 <span class="line"></span>
               </div>
+            </li>
+            <li class="nav-li hide es" id="redblue-li">
+              <a href="../red-blue-team.html">Rojo vs Azul</a>
             </li>
             <li class="nav-li hide" id="soc-li">
               <a href="../soc.html">
@@ -375,6 +372,12 @@
                 </svg>      
               </a>
             </li>
+            <li class="nav-li close hide">
+              <a href="../index.html#anchor-about">Nosotros</a>
+              <div class="underline">
+                <span class="line"></span>
+              </div>
+            </li>
             <li class="nav-li hide" id="standards-li">
               <a href="../index.html#anchor-standards">
                 <p>Standards</p>
@@ -398,8 +401,34 @@
                 <span class="line"></span>
               </div>
             </li>
-            <li class="nav-li hide es" id="redblue-li">
-              <a href="../red-blue-team.html">Rojo vs Azul</a>
+            <li class="nav-li hide" id="idioma-li">
+              <a href="../../servicios/soc-audit.html" id="idioma">
+                <p>EN</p>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100">
+                  <defs>
+                    <clipPath id="clip-path">
+                      <ellipse id="Elipse_46" data-name="Elipse 46" cx="50" cy="50" rx="50" ry="50" fill="none"/>
+                    </clipPath>
+                  </defs>
+                  <g id="Grupo_424" data-name="Grupo 424" transform="translate(-934.886 -2361.647)">
+                    <ellipse id="Elipse_45" data-name="Elipse 45" cx="50" cy="50" rx="50" ry="50" transform="translate(934.886 2361.647)" fill="#fff"/>
+                    <g id="Grupo_423" data-name="Grupo 423" transform="translate(934.886 2361.647)">
+                      <g id="Grupo_422" data-name="Grupo 422" clip-path="url(#clip-path)">
+                        <g id="Grupo_421" data-name="Grupo 421" transform="translate(-0.016 -0.061)">
+                          <path id="Trazado_550" data-name="Trazado 550" d="M986.807,2415.892a62.862,62.862,0,0,1,.148,7.036c.013.405-.2.615-.618.613-.459,0-.918.023-1.377.023q-22.486,0-44.973-.011c-1.732,0-1.69-.014-1.285,1.623.453,1.831,1.237,3.56,1.566,5.427a.757.757,0,0,0,.884.652c.749-.033,1.5.027,2.253.027q21.108,0,42.216-.035c1.153,0,1.416.362,1.365,1.435a49.284,49.284,0,0,0,.01,5.048c.058,1.077-.307,1.334-1.335,1.328-7.306-.045-14.612-.026-21.919-.031q-8.582-.005-17.164-.015H944.82a37.9,37.9,0,0,0,3.664,5.081c.433.555.843,1.128,1.269,1.688a2.343,2.343,0,0,0,2,1.047q14.971-.05,29.942-.04c1.46,0,2.92.037,4.38.021.637-.007.88.233.877.887-.008,2.058,0,4.117.069,6.173.023.716-.444.585-.807.59-1.5.023-3,.012-4.5.012q-9.9,0-19.8,0c-.478,0-.957.04-1.741.074a48.526,48.526,0,0,0,23.158,7.61,47.818,47.818,0,0,0,11.843-.522c.64-.122.841-.244.84-1-.02-10.556.023-21.112.048-31.668.005-2.357.052-4.716-.022-7.071-.033-1.033.331-1.256,1.288-1.253q15.535.048,31.072.023c2.336,0,4.673-.029,7.008,0,.692.009.932-.238,1.02-.918a56.374,56.374,0,0,0-.115-16.281c-.127-.786-.552-.864-1.213-.865q-18.711-.023-37.422-.08c-1.617,0-1.617,0-1.617-1.637.005-12.413-.007-24.825.043-37.238.005-1.177-.32-1.579-1.485-1.7a43,43,0,0,0-7.687-.388c.012,1.176.033,2.352.033,3.528q0,24.467-.013,48.934A4.572,4.572,0,0,1,986.807,2415.892Z" transform="translate(-936.957 -2361.502)" fill="#da0c15"/>
+                          <path id="Trazado_551" data-name="Trazado 551" d="M1091.714,2533.623v8.089c0,5.469.012,10.939-.01,16.408,0,.938-.13,1.38,1.2.907a49.789,49.789,0,0,0,18.041-11.207c.662-.637.659-.887-.119-1.406-6.073-4.055-12.114-8.158-18.167-12.243C1092.394,2533.992,1092.1,2533.848,1091.714,2533.623Z" transform="translate(-1026.177 -2461.118)" fill="#192c58"/>
+                          <path id="Trazado_552" data-name="Trazado 552" d="M1112.24,2517.848a8.817,8.817,0,0,0,2.32,1.747,13.414,13.414,0,0,1,2.463,1.655q6.164,4.118,12.333,8.228c.4.267.685.413.986-.138.862-1.583,1.759-3.146,2.646-4.715.258-.456.289-.786-.245-1.131q-4.346-2.812-8.644-5.7a2.175,2.175,0,0,0-1.293-.349q-4.634.011-9.269,0A1.875,1.875,0,0,0,1112.24,2517.848Z" transform="translate(-1038.137 -2451.753)" fill="#da0c15"/>
+                          <path id="Trazado_553" data-name="Trazado 553" d="M1159.769,2517.621h-6.326c1.734,1.168,3.224,2.2,4.741,3.179.4.256.8.192.829-.412A15.706,15.706,0,0,1,1159.769,2517.621Z" transform="translate(-1062.128 -2451.857)" fill="#192c58"/>
+                          <path id="Trazado_554" data-name="Trazado 554" d="M984.717,2416.073l-49.51-.193s-3.9-19.689,14.044-39.268c3.869-3.6,14.15-14.746,35.6-14.868C984.887,2372.95,984.717,2416.073,984.717,2416.073Z" transform="translate(-934.849 -2361.642)" fill="#192c58"/>
+                          <path id="Trazado_555" data-name="Trazado 555" d="M1092.313,2391.34v-8.089c0-5.469.012-10.939-.01-16.408,0-.938-.13-1.38,1.2-.907a49.783,49.783,0,0,1,18.041,11.207c.662.637.659.887-.119,1.406-6.073,4.055-12.114,8.158-18.167,12.242C1092.993,2390.97,1092.7,2391.114,1092.313,2391.34Z" transform="translate(-1026.526 -2363.957)" fill="#192c58"/>
+                          <path id="Trazado_556" data-name="Trazado 556" d="M1112.839,2425.418a8.809,8.809,0,0,1,2.32-1.748,13.447,13.447,0,0,0,2.463-1.656q6.163-4.118,12.333-8.228c.4-.267.685-.412.985.138.862,1.583,1.759,3.146,2.646,4.715.258.456.289.786-.245,1.132q-4.347,2.812-8.645,5.7a2.173,2.173,0,0,1-1.293.349q-4.634-.011-9.269,0A1.88,1.88,0,0,1,1112.839,2425.418Z" transform="translate(-1038.486 -2391.625)" fill="#da0c15"/>
+                          <path id="Trazado_557" data-name="Trazado 557" d="M1160.368,2437.945h-6.326c1.734-1.169,3.224-2.2,4.741-3.179.4-.257.8-.193.829.412A15.767,15.767,0,0,0,1160.368,2437.945Z" transform="translate(-1062.477 -2403.822)" fill="#192c58"/>
+                        </g>
+                      </g>
+                    </g>
+                  </g>
+                </svg>      
+              </a>
             </li>
         </ul>
     </nav>
