--- a/red-blue-team.html
+++ b/red-blue-team.html
@@ -159,12 +159,6 @@
         <span id="line-three"></span>
       </div>
         <ul id="nav-list">
-            <li class="nav-li hide close">
-              <a href="index.html#anchor-about">About us</a>
-              <div class="underline">
-                <span class="line"></span>
-              </div>
-            </li>
             <li class="nav-li hide" id="servicios-li">
               <a href="index.html#anchor-servicios">
                   <p>Services</p>  
@@ -191,6 +185,9 @@
               <div class="underline">
                 <span class="line"></span>
               </div>
+            </li>
+            <li class="nav-li hide" id="redblue-li">
+              <a href="red-blue-team.html">Red vs BLUE</a>
             </li>
             <li class="nav-li hide" id="soc-li">
               <a href="soc.html">
@@ -375,6 +372,12 @@
               </svg>          
             </a>
             </li>
+            <li class="nav-li hide close">
+              <a href="index.html#anchor-about">About us</a>
+              <div class="underline">
+                <span class="line"></span>
+              </div>
+            </li>
             <li class="nav-li hide" id="standards-li">
               <a href="index.html#anchor-standards">
                 <p>Standards</p>
@@ -398,8 +401,18 @@
                 <span class="line"></span>
               </div>
             </li>
-            <li class="nav-li hide" id="redblue-li">
-              <a href="red-blue-team.html">Red vs BLUE</a>
+            <li class="nav-li hide" id="idioma-li">
+              <a href="es/red-blue-team.html" id="idioma">
+                <p>ES</p>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                  <g id="Grupo_420" data-name="Grupo 420" transform="translate(-1280.53 -2071.578)">
+                    <path id="Trazado_547" data-name="Trazado 547" d="M1380.53,2219v7.226c-.283.218-.171.537-.2.813a48.855,48.855,0,0,1-2.967,12.871c-.748,0-1.5-.013-2.244-.013h-82.85q-4.293,0-8.587.013c-.055-.117-.121-.231-.164-.353a50.058,50.058,0,0,1-2.846-20.791,49.321,49.321,0,0,1,3.01-13.646c.813,0,1.626.013,2.439.013q40.839,0,81.679,0,4.782,0,9.563-.013a46.65,46.65,0,0,1,2.383,8.622C1380.039,2215.493,1380.272,2217.25,1380.53,2219Z" transform="translate(0 -100.944)" fill="#ffd02d"/>
+                    <path id="Trazado_548" data-name="Trazado 548" d="M1387.135,2104.179q-4.782.007-9.563.013h-81.679c-.813,0-1.626-.009-2.439-.013.544-1.317,1.031-2.662,1.642-3.947a50.038,50.038,0,0,1,38-28.115,8.983,8.983,0,0,0,3.1-.539h8.008c.113.3.383.181.586.2a57.3,57.3,0,0,1,6.64,1.061,49.468,49.468,0,0,1,23.609,12.806A48.648,48.648,0,0,1,1387.135,2104.179Z" transform="translate(-9.768 0)" fill="#cc001e"/>
+                    <path id="Trazado_549" data-name="Trazado 549" d="M1387.134,2347.591a49.918,49.918,0,0,1-35.621,31.3,49.977,49.977,0,0,1-53.613-22.229,46.287,46.287,0,0,1-4.448-9.073q4.294-.007,8.587-.013h82.85C1385.638,2347.578,1386.386,2347.586,1387.134,2347.591Z" transform="translate(-9.767 -208.622)" fill="#cc001e"/>
+                  </g>
+                </svg>
+                
+              </a>
             </li>
         </ul>
     </nav>
@@ -422,7 +435,7 @@
        <div id="slider">
         <div class="type-wrap">
           <div id="typed-strings" style="display: none;">
-            <p>We attack, <br> We protect.</p>
+            <p>SoeniX attacks, <br>SoeniX protects.</p>
           </div>
           <span id="typed"></span>
         </div>
@@ -549,6 +562,22 @@
         </div>
       </div>
     </div>
+
+    <a href="index.html#anchor-contacto" class="call-to-action">
+      <div id="wrapper">
+      <p>Request a Quote</p>
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 339.8 235.5" style="enable-background:new 0 0 339.8 235.5;" xml:space="preserve">
+      <defs>
+      </defs>
+      <path class="st0" d="M287.6,132.5c-10.3,0-20.6,0-30.9,0c-78,0-156,0-233.9,0c-3,0-6,0.1-9-0.3c-8.6-1.1-14.2-7.6-13.8-15.6
+      c0.4-7.8,7-13.6,15.6-13.6c53,0,106,0,159,0c36.7,0,73.3,0,110,0c1.3,0,2.6,0,4.4,0c-0.7-2.3-2.3-3.3-3.5-4.5
+      c-24.1-24.2-48.3-48.3-72.5-72.4c-3.8-3.8-6-8-5.3-13.3C208.3,7,211.5,2.9,217,1c5.9-2.1,11.2-0.8,15.7,3.5
+      c6.2,6,12.3,12.2,18.4,18.3c26.9,26.9,53.7,53.7,80.6,80.6c1.1,1.1,2.1,2.1,3.1,3.2c6.6,7.2,6.6,15.2-0.2,22.2
+      c-5.5,5.6-11.1,11.1-16.6,16.6c-28,28-56.1,56.1-84.1,84.1c-6.2,6.2-12.1,7.4-18.4,4.1c-9.1-4.7-10.8-15.9-3.4-23.6
+      c7.7-8.1,15.7-15.8,23.6-23.7c16.3-16.3,32.5-32.5,48.8-48.8c1.3-1.3,2.5-2.6,3.7-3.9C288,133.3,287.8,132.9,287.6,132.5z"/>
+      </svg>
+      </div>
+    </a>
 
     </main>
 
