--- a/es/industrias/education.html
+++ b/es/industrias/education.html
@@ -467,7 +467,7 @@
         <p>Los líderes de IT en educación se preocupan cada vez más por la seguridad de la información. Los riesgos surgen con la evolución de las tecnologías y las prácticas comerciales, dejando a las instituciones educativas vulnerables. La Ley de Protección de la Privacidad Infantil en Línea (COPPA), la Ley de Privacidad y Derechos Educativos de la Familia (FERPA), la Industria de Tarjetas de Pago (PCI) y la Ley de Portabilidad y Responsabilidad de la Información de Salud (HIPAA) son las principales preocupaciones de cumplimiento de seguridad para nuestros clientes en esta industria.</p>
         </div>
         <img src="../../img/education.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
