--- a/es/industrias/financial.html
+++ b/es/industrias/financial.html
@@ -467,7 +467,7 @@
         <p>Las empresas de servicios financieros se enfrentan a un escrutinio cada vez mayor para garantizar la protección de los datos de los clientes. La FDIC, SEC, OCIE y DOL tienen regulaciones o pautas que pueden afectar su organización, sus empleados y sus agentes. Con mayor frecuencia que nunca, las violaciones de la seguridad de la información de las empresas financieras están exponiendo datos críticos de los clientes y dejando a estas empresas luchando por restaurar su reputación dañada.</p>
         </div>
         <img src="../../img/financial.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
