--- a/es/industrias/legal.html
+++ b/es/industrias/legal.html
@@ -467,7 +467,7 @@
         <p>Nuestros clientes en el ámbito legal tienden a preocuparse por la satisfacción del cliente y por proteger su buena reputación. Los cuestionarios dirigidos por el cliente y las auditorías anuales in situ son algo común en la industria legal. SOC 2, Payment Card Industry (PCI), Health Information Portability and Accountability Act (HIPAA) junto con estatutos específicos de los gobiernos federales, estatales y locales siempre están presentes en el espacio legal, pero generalmente son aplicados por clientes corporativos.</p>
         </div>
         <img src="../../img/legal.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
