--- a/es/servicios/ciso-virtual.html
+++ b/es/servicios/ciso-virtual.html
@@ -467,7 +467,7 @@
         <p>Este servicio está diseñado para que los expertos en seguridad estén disponibles para las organizaciones que necesitan experiencia y orientación. Nuestro equipo crea programas de seguridad de la información que funcionan con objetivos comerciales y muestran una mejora apreciable.</p>
         </div>
         <img src="../../img/ciso.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
