--- a/es/servicios/pruebas-penetracion.html
+++ b/es/servicios/pruebas-penetracion.html
@@ -401,7 +401,7 @@
                 <span class="line"></span>
               </div>
             </li>
-            <li lass="nav-li hide" id="idioma-li">
+            <li class="nav-li hide" id="idioma-li">
               <a href="../../servicios/penetration-testing.html" id="idioma">
                 <p>EN</p>
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100">
@@ -464,10 +464,10 @@
     <div id="banner-servicios">
         <div id="service-intro">
         <h3>Pruebas de Penetración</h3>
-        <p>Nuestro seguro está diseñado para ayudar a tu compañía a protegerse contra los efectos potencialmente devastadores de los delitos cibernéticos, como malware, ransomware, ataques distribuidos de denegación de servicio (DDoS) o cualquier otro método utilizado para comprometer tu red y tus datos confidenciales.</p>
+        <p>Las pruebas de penetración ayudan a descubrir problemas arquitectónicos y conceptuales a través de ataques emulados del mundo real. La mejor manera de saber si su organización es susceptible a una brecha de seguridad es probar sus defensas. Al evaluar la fortaleza de la infraestructura de su empresa y revelar las vulnerabilidades, puede administrar esas debilidades de manera eficaz.</p>
         </div>
         <img src="../../img/penetration.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
