--- a/industrias/legal.html
+++ b/industrias/legal.html
@@ -435,7 +435,7 @@
         <p>Our clients in the legal space tend to be concerned with client satisfaction and protecting their good reputations. Client-driven questionnaires and on-site annual audits are commonplace in the legal industry. SOC 2, Payment Card Industry (PCI), Health Information Portability and Accountability Act (HIPAA) along with specific statutes from Federal, State and Local governments are ever present in the legal space, but are generally enforced by corporate clients.</p>
         </div>
         <img src="../img/legal.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
