--- a/servicios/framework-assesment.html
+++ b/servicios/framework-assesment.html
@@ -435,7 +435,7 @@
         <p>Security frameworks are utilized around the world to build information security programs and meet vendor management requirements. We provide you with a framework of information security guidance policies on how you can assess and improve your ability to prevent, detect and respond to cyber attacks.</p>
         </div>
         <img src="../img/framework.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
