--- a/servicios/penetration-testing.html
+++ b/servicios/penetration-testing.html
@@ -411,7 +411,6 @@
                     <path id="Trazado_549" data-name="Trazado 549" d="M1387.134,2347.591a49.918,49.918,0,0,1-35.621,31.3,49.977,49.977,0,0,1-53.613-22.229,46.287,46.287,0,0,1-4.448-9.073q4.294-.007,8.587-.013h82.85C1385.638,2347.578,1386.386,2347.586,1387.134,2347.591Z" transform="translate(-9.767 -208.622)" fill="#cc001e"/>
                   </g>
                 </svg>
-                
               </a>
             </li>
         </ul>
@@ -432,10 +431,10 @@
     <div id="banner-servicios">
         <div id="service-intro">
         <h3>Penetration Testing</h3>
-        <p>Our insurance is designed to help your business hedge against the potentially devastating effects of cybercrimes such as malware, ransomware, distributed denial-of-service (DDoS) attacks, or any other method used to compromise your network and sensitive data.</p>
+        <p>Penetration testing helps to uncover architectural and conceptual issues through emulated, real-world attacks. The best way to know if your organization is susceptible to a security breach is to test your defenses. By evaluating the strength of your company’s infrastructure and revealing vulnerabilities, you can effectively manage those weaknesses.</p>
         </div>
         <img src="../img/penetration.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
