--- a/es/industrias/banks.html
+++ b/es/industrias/banks.html
@@ -467,7 +467,7 @@
         <p>Los bancos y las uniones de crédito enfrentan requisitos anuales para las pruebas de seguridad y la validación de FDIC, OCC y NCUA, y necesitan un equipo de analistas con experiencia comprobada en esta industria para garantizar que las instituciones financieras cumplan con estos requisitos mientras implementan todas las medidas para una mejor seguridad en general.</p>
         </div>
         <img src="../../img/banks.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
