--- a/es/industrias/government.html
+++ b/es/industrias/government.html
@@ -467,7 +467,7 @@
         <p>Los gobiernos de la ciudad, el condado y el estado tienen entornos complejos y dispersos con muchos requisitos y desafíos de seguridad. En nuestra experiencia, estos desafíos se pueden superar con un enfoque centrado y deliberado en la seguridad de la información al mismo tiempo que se abordan los requisitos de cumplimiento de seguridad más rígidos.Los requisitos de PCI, HIPAA y Servicios de información de justicia penal (CJIS) para la aplicación de la ley son las principales preocupaciones de cumplimiento de seguridad para nuestros clientes en el gobierno.</p>
         </div>
         <img src="../../img/gov.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
