--- a/es/industrias/healthcare.html
+++ b/es/industrias/healthcare.html
@@ -468,7 +468,7 @@
         <p>Deben existir ciertas medidas de seguridad para proteger adecuadamente la información médica electrónica. La Ley de Portabilidad y Responsabilidad de la Información de Salud (HIPAA) ha sido el enfoque principal en la industria de la salud junto con la preparación del protocolo de auditoría de la Oficina de Derechos Civiles (OCR), Información de Atención Avanzada (ACI), anteriormente conocida como Uso Significativo y Regla Ómnibus. Además, PCI ha sido una preocupación creciente y un área de enfoque para muchas organizaciones de salud.</p>
         </div>
         <img src="../../img/healthcare.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
