--- a/es/industrias/manufacturing.html
+++ b/es/industrias/manufacturing.html
@@ -467,7 +467,7 @@
         <p>La proliferación del fabricante conectado a la red ha dado lugar a una productividad y escalabilidad sin precedentes, así como a problemas de seguridad. La propiedad intelectual, la importancia de evitar tiempos de inactividad y la protección de la información de los clientes y el personal es más importante que nunca. Nuestros clientes también están experimentando una mayor presión para cumplir con los requisitos de seguridad impulsados ​​por el cliente, como SOC 2 y NIST 800-171. Aquellos en áreas más específicas de la industria pueden experimentar requisitos PCI que los afectan.</p>
         </div>
         <img src="../../img/manufacturing.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
