--- a/es/industrias/nonprofit.html
+++ b/es/industrias/nonprofit.html
@@ -467,7 +467,7 @@
         <p>Las empresas del sector sin fines de lucro, que van desde pequeñas organizaciones basadas en la comunidad hasta misiones más grandes y más enfocadas a nivel mundial, confían en nosotros para que les ayudemos con su desafío común: cómo asignar fondos limitados de la manera más eficiente sin dejar de abordar la seguridad de la información de manera adecuada. . Los requisitos de subvenciones estatales, federales y locales, PCI y HIPAA son las principales preocupaciones de cumplimiento de seguridad para nuestros clientes sin fines de lucro.</p>
         </div>
         <img src="../../img/nonprofit.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
