--- a/es/industrias/professional.html
+++ b/es/industrias/professional.html
@@ -467,7 +467,7 @@
         <p>Nuestros clientes en servicios profesionales van desde empresas muy grandes a muy pequeñas y abarcan una gran cantidad de industrias. La mayoría tiene una cosa en común: la necesidad de administrar la seguridad de una manera que permita a los negocios en lugar de crear obstáculos. Las preocupaciones sobre el cumplimiento van desde la Industria de Tarjetas de Pago (PCI) hasta la Ley de Portabilidad y Responsabilidad de la Información de Salud (HIPAA), SOC 2 y otros clientes. requisitos impulsados.</p>
         </div>
         <img src="../../img/professional.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
