--- a/es/industrias/retail.html
+++ b/es/industrias/retail.html
@@ -467,7 +467,7 @@
         <p>La industria minorista no es ajena a las preocupaciones de seguridad y cumplimiento. La mayoría enfrenta márgenes cada vez más reducidos, mayor regulación y presión pública. El cumplimiento de la industria de tarjetas de pago (PCI) es el requisito más común en el comercio minorista; sin embargo, ha habido un cambio para aplicar principios de seguridad más sólidos a todas las áreas del negocio.</p>
         </div>
         <img src="../../img/retail.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
