--- a/es/servicios/analisis-forense.html
+++ b/es/servicios/analisis-forense.html
@@ -467,7 +467,7 @@
         <p>Nuestras soluciones forenses le brindarán contexto de ataque, visibilidad en toda la infraestructura, experiencia codificada, inteligencia enriquecida y conocimientos adquiridos a partir de la experiencia de primera línea en respuesta a las amenazas más impactantes del mundo. Por lo tanto, tendrá todo lo que necesita para detectar, clasificar, investigar y minimizar rápidamente el impacto de los ataques.</p>
         </div>
         <img src="../../img/cyber.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
