--- a/es/servicios/auditoria-soc.html
+++ b/es/servicios/auditoria-soc.html
@@ -467,7 +467,7 @@
         <p>Ya sea que se enfrente a los requisitos reglamentarios de SOC 2 o las demandas de la administración, podemos ayudarlo a prepararse para una auditoría de SOC 2 a través de nuestras evaluaciones de preparación.</p>
         </div>
         <img src="../../img/soc.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
