--- a/es/servicios/evaluacion-riesgos.html
+++ b/es/servicios/evaluacion-riesgos.html
@@ -467,7 +467,7 @@
         <p>Nuestra evaluación implica identificar los riesgos en tu empresa, tu tecnología y tus procesos para verificar que existan controles para salvaguardar contra las amenazas de seguridad.</p>
         </div>
         <img src="../../img/risk.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
