--- a/es/servicios/respuesta-incidentes.html
+++ b/es/servicios/respuesta-incidentes.html
@@ -467,7 +467,7 @@
         <p>Nuestro seguro está diseñado para ayudar a tu compañía a protegerse contra los efectos potencialmente devastadores de los delitos cibernéticos, como malware, ransomware, ataques distribuidos de denegación de servicio (DDoS) o cualquier otro método utilizado para comprometer tu red y tus datos confidenciales.</p>
         </div>
         <img src="../../img/incident.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
