--- a/es/servicios/riesgo-proveedores.html
+++ b/es/servicios/riesgo-proveedores.html
@@ -461,13 +461,12 @@
     </a>
   </header>
 
-    <div id="banner-servicios">
+    <div id="banner-servicios" class="background-2">
         <div id="service-intro">
         <h3>Gestión de Riesgos de Proveedores</h3>
         <p>Nuestros servicios de VRM lo ayudan a identificar a los proveedores que presentan el mayor riesgo para su organización, evaluando igualmente a todos los proveedores externos y sacando a la luz sus vínculos más débiles.</p>
         </div>
-        <img src="../../img/vendor.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
