--- a/es/standards/pci.html
+++ b/es/standards/pci.html
@@ -467,7 +467,7 @@
         <p>Un conjunto de requisitos destinados a garantizar que todas las empresas que procesan, almacenan o transmiten información de tarjetas de crédito mantengan un entorno seguro. Se lanzó para administrar los estándares de seguridad PCI y mejorar la seguridad de la cuenta durante todo el proceso de transacción. Un organismo independiente creado por Visa, MasterCard, American Express, Discover y JCB. Las marcas de pago y los adquirentes son responsables de hacer cumplirlo.</p>
         </div>
         <img src="../../img/dss.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
