--- a/industrias/banks.html
+++ b/industrias/banks.html
@@ -435,7 +435,7 @@
         <p>Banks and credit unions face annual requirements for security testing and validation from FDIC, OCC and NCUA, needing a team of  analysts with proven experience in this industry to ensure financial institutions meet these requirements while implementing every measure for better security overall.</p>
         </div>
         <img src="../img/banks.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
