--- a/industrias/education.html
+++ b/industrias/education.html
@@ -435,7 +435,7 @@
         <p>Education IT leaders are becoming increasingly concerned with information security. Risks arise with evolving technologies and business practices, leaving educational institutions vulnerable. The Children’s Online Privacy Protection Act (COPPA), the Family Education Rights and Privacy Act (FERPA), Payment Card Industry (PCI) and Health Information Portability and Accountability Act (HIPAA) are the primary security compliance concerns for our clients in this industry.</p>
         </div>
         <img src="../img/education.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
