--- a/industrias/financial.html
+++ b/industrias/financial.html
@@ -433,7 +433,7 @@
         <p>Financial Services firms face increasing scrutiny to ensure the protection of client data. The FDIC, SEC, OCIE and DOL all have regulations or guidelines that may impact your organization, your employees and your agents. With greater frequency than ever, information security breaches of financial firms are exposing critical client data and leaving these firms struggling to restore their damaged reputation.</p>
         </div>
         <img src="../img/financial.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
