--- a/industrias/manufacturing.html
+++ b/industrias/manufacturing.html
@@ -435,7 +435,7 @@
         <p>The proliferation of the network-connected manufacturer has led to unprecedented productivity and scalability, as well as security concerns. Intellectual property, the importance of avoiding down time and the protection of client and staff information is more important than ever. Our clients are also seeing more pressure to comply with client-driven security requirements like SOC 2 and NIST 800-171. Those in more industry-specific areas may experience requirements like PCI bearing down on them.</p>
         </div>
         <img src="../img/manufacturing.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
