--- a/industrias/nonprofit.html
+++ b/industrias/nonprofit.html
@@ -435,7 +435,7 @@
         <p>Businesses in the non-profit sector, ranging from small, community-based organizations to larger, more globally focused missions, rely on us to help with their common challenge:  how to most efficiently allocate limited funds while still addressing information security in an appropriate way. State, federal and local grant requirements, PCI and HIPAA are the primary security compliance concerns for our nonprofit clients.</p>
         </div>
         <img src="../img/nonprofit.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
