--- a/industrias/professional.html
+++ b/industrias/professional.html
@@ -435,7 +435,7 @@
         <p>Our clients in professional services range from very large to very small businesses and span a great number of industries. Most have one thing in common: the need to manage security in a way that enables business instead of creating road blocks.Compliance concerns range from Payment Card Industry (PCI) to Health Information Portability and Accountability Act (HIPAA) to SOC 2 and other client-driven requirements.</p>
         </div>
         <img src="../img/professional.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
