--- a/noc.html
+++ b/noc.html
@@ -441,7 +441,7 @@
         </div>
         <h3>Detect, diagnose and remediate any network performance issues.</h3>
       </div>
-      <a href="#soc-about" id="arrow">
+      <a href="#noc-about" id="arrow">
         <p>Learn more</p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
             <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
