--- a/servicios/pci-dss-compliance.html
+++ b/servicios/pci-dss-compliance.html
@@ -435,7 +435,7 @@
         <p>We provide you with the expertise necessary for your company to meet the requirements of protecting sensitive information from credit and debit cards to maintain a secure environment.</p>
         </div>
         <img src="../img/pci.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
@@ -549,5 +549,5 @@
   duration: 700,
 })
 </script>
-<script src=".../../js/script.js"></script>
+<script src="../js/script.js"></script>
 </html>
