--- a/servicios/remote-work-readiness.html
+++ b/servicios/remote-work-readiness.html
@@ -429,13 +429,12 @@
       </a>
   </header>
 
-    <div id="banner-servicios">
+    <div id="banner-servicios" class="background">
         <div id="service-intro">
         <h3>Remote Work Readiness Assesment</h3>
-        <p>Our insurance is designed to help your business hedge against the potentially devastating effects of cybercrimes such as malware, ransomware, distributed denial-of-service (DDoS) attacks, or any other method used to compromise your network and sensitive data.</p>
+        <p>Our assessment is a proactive review of the crucial controls in your remote work environment that helps provide assurance that you are addressing risks, protecting your people and data.</p>
         </div>
-        <img src="../img/remote.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
