--- a/servicios/soc-audit.html
+++ b/servicios/soc-audit.html
@@ -435,7 +435,7 @@
         <p>Whether you’re faced with SOC 2 regulatory requirements or demands from management, we can help prepare you for a SOC 2 audit through our readiness assessments.</p>
         </div>
         <img src="../img/soc.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
