--- a/servicios/social-engineering.html
+++ b/servicios/social-engineering.html
@@ -434,7 +434,7 @@
         <p>Simulated attacks that reveal your team’s security shortcuts, followed by security training, is the best way to avoid an attack. When we conduct your social engineering, we’ll typically obtain privileged information from 25% of your employees.</p>
         </div>
         <img src="../img/social.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
