--- a/servicios/virtual-ciso.html
+++ b/servicios/virtual-ciso.html
@@ -435,7 +435,7 @@
         <p>This service is designed to make security experts available to organizations who need expertise and guidance. Our team builds information security programs that work with business objectives and show measurable improvement.</p>
         </div>
         <img src="../img/ciso.png" alt="">
-        <a href="#main" id="arrow">
+        <a href="#types" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
