--- a/industrias/banks.html
+++ b/industrias/banks.html
@@ -190,24 +190,21 @@
                   <a href="../red-blue-team.html">Red vs BLUE</a>
                 </li>
                 <li class="nav-li hide" id="soc-li">
-                  <a href="../soc.html">
-                    <p>SOC</p>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 413.404 413.427">
+                  <a href="#">
+                    <p>SOC/NOC</p>
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.5 29.5" style="enable-background:new 0 0 54.5 29.5;" xml:space="preserve" class="show-options" id="arrow-soc">
                       <defs>
-                        <style>
-                          .c-1 {
-                            fill: #36BA5A;
-                          }
-                        </style>
                       </defs>
-                      <g id="Grupo_1" data-name="Grupo 1" transform="translate(-114.807 -399.769)">
-                        <path id="Trazado_1" data-name="Trazado 1" class="c-1" d="M321.531,813.2c-114.287,0-206.829-92.726-206.724-207.289.1-113.927,94.091-208.306,210.907-206.1,111.567,2.107,204.73,94.578,202.456,211.033C526,722.192,434.586,813.187,321.531,813.2Zm2.824-32.643c0,5.829.155,11.664-.056,17.485-.134,3.695,1.24,5.216,4.932,4.9,6.3-.54,12.661-.56,18.9-1.477,51.007-7.5,93.789-30.184,126.681-70.192,26.5-32.237,40.764-69.451,43.1-111.207.258-4.615-1.248-6.2-5.866-6.1-11.152.243-22.315.176-33.471.027-3.7-.05-5.175,1.082-5.553,5.034-2.242,23.433-9.542,45.271-22.522,64.924-28.9,43.764-69.259,69.059-121.756,74.176-3.534.344-4.531,1.649-4.43,4.941C324.483,768.892,324.355,774.725,324.355,780.553Zm-9.71.03c0-5.829-.177-11.666.064-17.485.156-3.785-1.361-4.856-4.963-4.9a108.926,108.926,0,0,1-14.409-1.187A151.947,151.947,0,0,1,165.771,617.561c-.233-3.285-1.436-4.286-4.561-4.251-10.492.12-20.988.17-31.477-.017-3.935-.071-4.954,1.712-4.651,5.167.522,5.963.526,12.005,1.5,17.889C138,705.238,174.916,755.3,237.908,785.637c22.277,10.727,46.062,16.184,70.828,17.309,4.606.209,6.3-1.2,5.994-5.88C314.378,791.593,314.648,786.079,314.645,780.583Zm0-350.218c0-5.163-.168-10.333.055-15.487.164-3.785-1.41-4.92-5.016-4.844a147.837,147.837,0,0,0-25.272,2.763q-90.327,17.623-135.267,97.982c-15.1,27.021-22.855,56.3-24.089,87.279-.156,3.911.757,5.794,5.2,5.674,10.152-.273,20.319-.2,30.476-.024,3.606.063,5.15-1,4.978-4.81-.349-7.7,1-15.272,2.466-22.78,14.1-72.259,76.414-123.679,142.6-125.429,3.188-.084,3.957-1.525,3.9-4.335C314.565,441.027,314.642,435.7,314.645,430.365Zm0,50.4c0-5.333-.152-10.671.054-15.995.137-3.558-1.3-4.882-4.717-4.487-4.625.534-9.3.747-13.879,1.55-44.058,7.735-77.059,31.664-100.254,69.4-12.332,20.064-18.893,42.155-20.5,65.654-.458,6.719-.237,6.744,6.328,6.753q13,.015,25.995,0c7.93,0,7.862-.011,8.931-7.994,4.288-32.024,20.327-57.013,46.069-75.962,13.646-10.044,28.909-16.505,45.9-18.2,4.774-.476,6.681-2.292,6.168-7.239C314.284,489.8,314.648,485.265,314.644,480.766ZM195.7,613.356c-5.332,0-10.671.158-15.994-.054-3.669-.146-4.781,1.467-4.318,4.809.458,3.295.746,6.617,1.29,9.9,5.818,35.088,22.194,64.266,49.349,87.242,24.069,20.363,52.075,31.1,83.43,33.422,3.838.284,5.408-.833,5.275-4.948-.27-8.322-.4-16.677.043-24.985.265-4.933-1.432-6.649-6.191-7.246-29.957-3.76-53.215-19.107-71.444-42.512-11.25-14.444-18.692-30.715-20.561-49.137-.525-5.168-2.544-7.238-7.894-6.6C204.409,613.761,200.028,613.352,195.7,613.356ZM324.361,730.492c0,4.828.061,9.658-.023,14.484-.05,2.855,1.078,3.887,3.957,3.423,4.1-.662,8.253-.971,12.358-1.6,64.136-9.793,116.021-64.277,122.562-128.474.378-3.707-1.034-4.326-4.046-4.3-6.326.063-12.653.012-18.98.012-12.147,0-12.04.022-14.508,11.612-6.865,32.247-25.646,55.786-53.58,72.4a103.107,103.107,0,0,1-43.391,13.9c-3.443.33-4.565,1.732-4.408,5.051C324.514,721.494,324.355,726,324.361,730.492Zm-9.713-173.35c0-13.831-.112-27.663.075-41.491.05-3.675-.757-5-4.735-4.573a85.08,85.08,0,0,0-41.428,16.131c-24.4,17.734-39.114,41.335-42.474,71.649-.414,3.736.527,4.9,4.424,4.874q39.489-.243,78.982,0c4.387.029,5.274-1.691,5.223-5.6C314.54,584.471,314.648,570.8,314.648,557.142Zm55.963,56.9c-13.489,0-26.979.118-40.465-.07-4.16-.058-5.917.988-5.884,5.568q.282,38.965.007,77.934c-.024,3.867,1.093,4.838,4.854,4.443,28.021-2.942,50.4-16.117,68.073-37.6a89.733,89.733,0,0,0,19.1-41.259c1.526-8.25.955-9.013-7.221-9.017Q389.845,614.036,370.611,614.045Zm-55.963,43.942c0-13-.157-26,.088-38.99.082-4.324-1.145-5.773-5.616-5.738-24.66.2-49.322.093-73.984.093-10.322,0-10.321,0-8.327,10.1,4.978,25.219,18.384,45.1,38.731,60.395,13.139,9.878,27.783,16.3,44.333,18.052,3.768.4,4.927-.535,4.861-4.42C314.509,684.317,314.648,671.151,314.648,657.987Zm19.619-247.841c-1.644,0-2.477.018-3.309,0-6.586-.17-6.6-.173-6.6,6.593-.009,9.833.081,19.666-.046,29.5-.04,3.157,1.005,4.395,4.283,4.549a140.481,140.481,0,0,1,15.371,1.641c30.336,4.8,56.632,17.919,79.082,38.809,1.737,1.617,3.067,2.909,5.331.589,8.38-8.587,16.863-17.072,25.361-25.542,1.687-1.681,1.616-2.808-.179-4.464C419.582,430.487,379.576,413.247,334.267,410.146Zm-9.912,70.426c0,5.161.152,10.329-.054,15.483-.135,3.372,1.053,4.65,4.495,4.916,22.583,1.748,42.712,9.648,59.879,24.607,2.372,2.067,4.058,2,6.277-.307q10.38-10.806,21.119-21.262c2.319-2.249,1.964-3.648-.2-5.624-24.725-22.619-53.939-34.886-87.158-38.032-3.271-.309-4.506.966-4.4,4.235C324.478,469.911,324.357,475.243,324.355,480.572Zm0,113.869c1.5-1.191,2.05-1.552,2.508-2.009,18.038-18.018,36.018-36.1,54.152-54.018,2.794-2.762,1.875-4.256-.6-6.288-14.989-12.287-31.989-19.484-51.392-21.13-4.009-.341-4.759.847-4.734,4.511.144,21.329.07,42.66.07,63.99Z"/>
-                      </g>
+                      <polyline class="st0" points="1.5,3 26.5,28 53,1.5 "/>
                     </svg>
-                    <div class="underline">
-                      <span class="line"></span>
-                    </div>
                   </a>
+                  <ul id="under-soc">
+                    <li class="cyber close"><a href="../soc.html">SOC</a></li>
+                    <li class="incident close"><a href="../noc.html">NOC</a></li>
+                  </ul>
+                  <div class="underline">
+                    <span class="line"></span>
+                  </div>
                 </li>
                 <li id="industrias-li" class="nav-li hide">
                   <a href="../index.html#anchor-industrias">
@@ -434,12 +431,8 @@
         <h3>Banks and Credit Unions</h3>
         <p>Banks and credit unions face annual requirements for security testing and validation from FDIC, OCC and NCUA, needing a team of  analysts with proven experience in this industry to ensure financial institutions meet these requirements while implementing every measure for better security overall.</p>
         </div>
+        <a href="../index.html#anchor-contacto" class="ask">Ask our experts <span>></span></a>
         <img src="../img/banks.png" alt="">
-        <a href="#" id="arrow">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
-                <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
-            </svg> 
-        </a>
     </div>
 
     <footer>
