--- a/es/standards/hipaa.html
+++ b/es/standards/hipaa.html
@@ -464,7 +464,7 @@
         <p>HIPAA es un estándar de seguridad de la información destinado a proteger los datos del paciente a los que se confían las organizaciones de atención médica. Está estrechamente regulado por la Oficina de Derechos Civiles (OCR).</p>
         </div>
         <img src="../../img/hipaa.png" alt="">
-        <a href="#types" id="arrow">
+        <a href="#info" id="arrow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.569 67.984">
                 <path id="Trazado_1" data-name="Trazado 1" d="M-404.848,1263.03l35.177,32.146-35.177,32.146" transform="translate(406.535 -1261.185)" fill="none" stroke="#eee" stroke-width="5"/>
             </svg> 
